compiling_error.txt
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c: In function ‘peek’:
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:105:12: error: incompatible types when returning type ‘struct Pilha’ but ‘char’ was expected
     return stack->prox[stack->topo];
            ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c: In function ‘infixaParaPosfixa’:
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:124:18: warning: passing argument 1 of ‘push’ from incompatible pointer type [-Wincompatible-pointer-types]
             push(pilha, exp[i]);
                  ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:31:6: note: expected ‘Pilha ** {aka struct Pilha **}’ but argument is of type ‘Pilha * {aka struct Pilha *}’
 void push(Pilha **N, char topo) {
      ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:131:32: warning: passing argument 1 of ‘pop’ from incompatible pointer type [-Wincompatible-pointer-types]
                 exp[++k] = pop(pilha,exp[i]);
                                ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:43:5: note: expected ‘Pilha ** {aka struct Pilha **}’ but argument is of type ‘Pilha * {aka struct Pilha *}’
 int pop(Pilha **N, char *topo) {
     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:131:38: warning: passing argument 2 of ‘pop’ makes pointer from integer without a cast [-Wint-conversion]
                 exp[++k] = pop(pilha,exp[i]);
                                      ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:43:5: note: expected ‘char *’ but argument is of type ‘char’
 int pop(Pilha **N, char *topo) {
     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:135:21: warning: passing argument 1 of ‘pop’ from incompatible pointer type [-Wincompatible-pointer-types]
                 pop(pilha,exp[i]);
                     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:43:5: note: expected ‘Pilha ** {aka struct Pilha **}’ but argument is of type ‘Pilha * {aka struct Pilha *}’
 int pop(Pilha **N, char *topo) {
     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:135:27: warning: passing argument 2 of ‘pop’ makes pointer from integer without a cast [-Wint-conversion]
                 pop(pilha,exp[i]);
                           ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:43:5: note: expected ‘char *’ but argument is of type ‘char’
 int pop(Pilha **N, char *topo) {
     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:140:32: warning: passing argument 1 of ‘pop’ from incompatible pointer type [-Wincompatible-pointer-types]
                 exp[++k] = pop(pilha,exp[i]);
                                ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:43:5: note: expected ‘Pilha ** {aka struct Pilha **}’ but argument is of type ‘Pilha * {aka struct Pilha *}’
 int pop(Pilha **N, char *topo) {
     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:140:38: warning: passing argument 2 of ‘pop’ makes pointer from integer without a cast [-Wint-conversion]
                 exp[++k] = pop(pilha,exp[i]);
                                      ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:43:5: note: expected ‘char *’ but argument is of type ‘char’
 int pop(Pilha **N, char *topo) {
     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:141:18: warning: passing argument 1 of ‘push’ from incompatible pointer type [-Wincompatible-pointer-types]
             push(pilha, exp[i]);
                  ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:31:6: note: expected ‘Pilha ** {aka struct Pilha **}’ but argument is of type ‘Pilha * {aka struct Pilha *}’
 void push(Pilha **N, char topo) {
      ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:148:24: warning: passing argument 1 of ‘pop’ from incompatible pointer type [-Wincompatible-pointer-types]
         exp[++k] = pop(pilha,exp[i]);
                        ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:43:5: note: expected ‘Pilha ** {aka struct Pilha **}’ but argument is of type ‘Pilha * {aka struct Pilha *}’
 int pop(Pilha **N, char *topo) {
     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:148:30: warning: passing argument 2 of ‘pop’ makes pointer from integer without a cast [-Wint-conversion]
         exp[++k] = pop(pilha,exp[i]);
                              ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:43:5: note: expected ‘char *’ but argument is of type ‘char’
 int pop(Pilha **N, char *topo) {
     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c: In function ‘main’:
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:190:34: warning: passing argument 2 of ‘infixaParaPosfixa’ from incompatible pointer type [-Wincompatible-pointer-types]
             infixaParaPosfixa(op,&topo);
                                  ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:110:5: note: expected ‘Pilha * {aka struct Pilha *}’ but argument is of type ‘Pilha ** {aka struct Pilha **}’
 int infixaParaPosfixa(char* exp, Pilha *pilha)
     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c: In function ‘Infixa_Posfixa’:
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:228:12: warning: passing argument 1 of ‘push’ from incompatible pointer type [-Wincompatible-pointer-types]
       push(p,'(');
            ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:31:6: note: expected ‘Pilha ** {aka struct Pilha **}’ but argument is of type ‘Pilha * {aka struct Pilha *}’
 void push(Pilha **N, char topo) {
      ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:231:13: warning: passing argument 1 of ‘pop’ from incompatible pointer type [-Wincompatible-pointer-types]
         pop(p,item);
             ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:43:5: note: expected ‘Pilha ** {aka struct Pilha **}’ but argument is of type ‘Pilha * {aka struct Pilha *}’
 int pop(Pilha **N, char *topo) {
     ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:231:15: warning: passing argument 2 of ‘pop’ makes pointer from integer without a cast [-Wint-conversion]
         pop(p,item);
               ^
/home/lemospadilha/Dropbox/TADS - UFPR/3-Semestre/Estrutura de Dados/1Bimestre/Trabalho-EstruturaDeDados-pilha-e-fila/main.c:43:5: note: expected ‘char *’ but argument is of type ‘char’
 int pop(Pilha **N, char *topo) {
     ^
